Bug 699017 - aria-required attribute on file input not read by JAWS, r=tbsaunde, marcoz, roc